src/components/Navbar/Navbar.scss
@use "../../scss/font";
@use "../../scss/mixins";

.nav-bar {
    width: 100%;
    height: 55px;
    display: flex;
    justify-content: space-between;
    position: fixed;

    .logo {
        font-family: font.$logo-font;
        font-size: 2em;
        margin-left: 1em;
    }

    .burger {
        width: 2rem;
        height: 2rem;
        position: fixed;
        top: 15px;
        right: 20px;
        display: flex;
        justify-content: space-around;
        flex-flow: column nowrap;
        z-index: 20;
        display: none;
    
        @media (max-width: 768px) {
            display: flex;
            justify-content: space-around;
            flex-flow: column nowrap;
        }

        .lines {
            width: 2rem;
            height: 0.25rem;
            border-radius: 10px;
            transform-origin: 1px;
            transition: all 0.3s linear;
            // background-color is in the Burger.jsx
        }
    }
    img {
        width: 100px;
        height: auto;
    }
    ul {
        list-style: none;
        text-decoration: none;
        display: flex;
        flex-flow: row nowrap;
        margin: 0;
        transition: transform 0.3s ease-in-out;
    
        li {
            padding: 18px 10px;

            a {
                text-decoration: none;
                color: rgb(0, 0, 0);
                @include mixins.animate-underline-left;
            }
        }

        @media (max-width: 768px) {
            flex-flow: column nowrap;
            background: rgba($color: #dddddd, $alpha: 1.0);
            color: #fff;
            position: fixed;
            top: 0;
            right: 0;
            height: 100vh;
            width: 150px;
            padding-top: 3.5rem;
            // transform is used in the RightNav.jsx file
        }
    }
}
.active {
    background-color: rgba(72, 72, 72, 0.09);
    padding: .5rem;
    transition: transform 0.3s ease-in-out;
    border-radius: 5px;
}

